Setup Jersey with JDK Http Server

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
     id 'application'
+    id 'war'
 }
 
 application {
-    mainClass.set("Main")
+    mainClass.set("JabRefServer")
 }
 
 group 'org.jabref'
@@ -41,6 +42,21 @@ dependencies {
     implementation ('com.github.DominikVoigt:jabref:main-SNAPSHOT') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
+
+    // Jersey https://github.com/JabRef/cloudref/blob/master/backend/build.gradle
+    implementation group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '3.0.3'
+    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '3.0.3'
+    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '3.0.3'
+    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-jdk-http', version: '3.0.3'
+    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
+
+    implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
+    implementation group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
+
+
+    // Logging
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-SNAPSHOT'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-SNAPSHOT'
