--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'war'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 application {
@@ -38,6 +39,12 @@ sourceSets {
     }
 }
 
+javafx {
+    version = "17.0.0.1"
+    // Requires
+    modules = [ 'javafx.base', 'javafx.controls']
+}
+
 dependencies {
     implementation ('com.github.DominikVoigt:jabref:main-SNAPSHOT') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
@@ -54,6 +61,7 @@ dependencies {
 
     implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
     implementation group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
 
     // Logging
@@ -65,8 +73,9 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
     annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    testImplementation(platform('org.junit:junit-bom:5.8.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
 
 configurations.all {
@@ -75,4 +84,7 @@ configurations.all {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
