--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ application {
 group 'org.jabref'
 version '1.0-SNAPSHOT'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://repository.apache.org/snapshots' }
