--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,15 @@ javafx {
 }
 
 dependencies {
-    implementation ('com.github.DominikVoigt:jabref:main-SNAPSHOT') {
+    implementation ('com.github.DominikVoigt:jabref:jitpack-SNAPSHOT'){
         exclude group: 'org.slf4j', module: 'slf4j-api'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-jcl'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j18-impl'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-plugins'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
+        exclude group: 'org.tinylog', module: 'slf4j-tinylog'
     }
 
     // Jersey https://github.com/JabRef/cloudref/blob/master/backend/build.gradle
@@ -69,14 +76,9 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
 
-    // Logging
+    //Logging:
     implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-SNAPSHOT'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-SNAPSHOT'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-plugins', version: '3.0.0-SNAPSHOT'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '3.0.0-SNAPSHOT'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
-    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
+    implementation group: 'org.tinylog', name: 'slf4j-tinylog', version: '2.4.1'
 
 
     testImplementation(platform('org.junit:junit-bom:5.8.2'))
