--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'org.glassfish.jersey.core:jersey-client:3.0.4'
     implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.0.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
