--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,21 @@
             <param-value>org.planqk.library.rest</param-value>
         </init-param>
     </servlet>
+    <servlet>
+        <servlet-name>OpenApi</servlet-name>
+        <servlet-class>io.swagger.v3.jaxrs2.integration.OpenApiServlet</servlet-class>
+        <init-param>
+            <param-name>openApi.configuration.resourcePackages</param-name>
+            <param-value>org.planqk.library.rest</param-value>
+        </init-param>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>PlanQKLibrary</servlet-name>
         <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OpenApi</servlet-name>
+        <url-pattern>/openapi/*</url-pattern>
     </servlet-mapping>
 </web-app>
