--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     implementation ('io.swagger.core.v3:swagger-jaxrs2-jakarta:2.1.13') {
         exclude group: 'com.fasterxml.jackson.jaxrs', module: 'jackson-jaxrs-json-provider'
     }
+    implementation group: 'org.webjars', name: 'swagger-ui', version: '4.5.2'
+    // https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
+    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.1.12'
+
 
     implementation 'io.swagger.core.v3:swagger-jaxrs2-servlet-initializer-v2-jakarta:2.1.13'
 
