Fix some issues

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
 
+    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '9.0.0'
+
+
 
     testImplementation(platform('org.junit:junit-bom:5.8.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
