Fix issue due to wrong annotation

--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,3 +1,6 @@
 writer1 = console
 writer1.level = info
 writer1.format = {class}.{method}() {level}: {message}
+writer2 = console
+writer2.level = error
+writer2.format = {class}.{method}() {level}: {message}
