--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         id: vars
         run: |
           DOCKER_IMAGE=planqk/planqk-library
-          VERSION=m1test
+          VERSION=latest
           SHORTREF=${GITHUB_SHA::8}
 
           # If this is git tag, use the tag name
